NetBSD Problem Report #46362

From www@NetBSD.org  Sat Apr 21 12:13:03 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 59E9163B915
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 21 Apr 2012 12:13:03 +0000 (UTC)
Message-Id: <20120421121302.4469E63B86B@www.NetBSD.org>
Date: Sat, 21 Apr 2012 12:13:02 +0000 (UTC)
From: wgstuken@nagler-company.com
Reply-To: wgstuken@nagler-company.com
To: gnats-bugs@NetBSD.org
Subject: PUC driver for OX16PCI958 uses wrong freq setup
X-Send-Pr-Version: www-1.0

>Number:         46362
>Category:       kern
>Synopsis:       PUC driver for OX16PCI958 uses wrong freq setup
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 21 12:15:00 +0000 2012
>Closed-Date:    Wed Aug 15 01:04:19 +0000 2012
>Last-Modified:  Wed Oct 31 17:30:05 +0000 2012
>Originator:     Wolfgang Stukenbrock
>Release:        current (CVS-repository)
>Organization:
Dr. Nagler & Company GmbH
>Environment:
amd64 - but this is not relevant here
>Description:
The entry in /usr/src/sys/dev/pci/pucdata.c for the OX16PCI958 uses a frequency devicer setup of "COM_FREQ * 10" for all of the 8 ports.

At least our EX-41098-2 requires a setup with "COM_FREQ" in order to run with correct speed settings.

I do not know if there are other cards with this chip that needs the "* 10" setup or if this is just
a copy and paste error.

Here the PCI-dump information of the card, in case you need it to create a special setup for this card (generated with "pcictl /dev/pci4 dump -d 6".


PCI configuration registers:
  Common header:
    0x00: 0x95381415 0x02100007 0x07020001 0x00000000

    Vendor Name: Oxford Semiconductor (0x1415)
    Device ID: 0x9538
    Command register: 0x0007
      I/O space accesses: on
      Memory space accesses: on
      Bus mastering: on
      Special cycles: off
      MWI transactions: off
      Palette snooping: off
      Parity error checking: off
      Address/data stepping: off
      System error (SERR): off
      Fast back-to-back transactions: off
      Interrupt disable: off
    Status register: 0x0210
      Capability List support: on
      66 MHz capable: off
      User Definable Features (UDF) support: off
      Fast back-to-back capable: off
      Data parity error detected: off
      DEVSEL timing: medium (0x1)
      Slave signaled Target Abort: off
      Master received Target Abort: off
      Master received Master Abort: off
      Asserted System Error (SERR): off
      Parity error detected: off
    Class Name: communications (0x07)
    Subclass Name: multi-port serial (0x02)
    Interface: 0x00
    Revision ID: 0x01
    BIST: 0x00
    Header Type: 0x00 (0x00)
    Latency Timer: 0x00
    Cache Line Size: 0x00

  Type 0 ("normal" device) header:
    0x10: 0xff700100 0x0000d101 0x0000d181 0x0000d1c1
    0x20: 0xff700180 0xff7001c0 0x00000000 0x06711415
    0x30: 0x00000000 0x00000040 0x00000000 0x0000010a
    Base address register at 0x10
      type: 32-bit nonprefetchable memory
      base: 0xff700100, not sized
    Base address register at 0x14
      type: i/o
      base: 0x0000d100, not sized
    Base address register at 0x18
      type: i/o
      base: 0x0000d180, not sized
    Base address register at 0x1c
      type: i/o
      base: 0x0000d1c0, not sized
    Base address register at 0x20
      type: 32-bit nonprefetchable memory
      base: 0xff700180, not sized
    Base address register at 0x24
      type: 32-bit nonprefetchable memory
      base: 0xff7001c0, not sized
    Cardbus CIS Pointer: 0x00000000
    Subsystem vendor ID: 0x1415
    Subsystem ID: 0x0671
    Expansion ROM Base Address: 0x00000000
    Capability list pointer: 0x40
    Reserved @ 0x38: 0x00000000
    Maximum Latency: 0x00
    Minimum Grant: 0x00
    Interrupt pin: 0x01 (pin A)
    Interrupt line: 0x0a

  Capability register at 0x40
    type: 0x01 (Power Management, rev. 1.0)

  PCI Power Management Capabilities Register
    Capabilities register: 0x0022
      Version: 1.1
      PME# clock: off
      Device specific initialization: on
      3.3V auxiliary current: self-powered
      D1 power management state support: off
      D2 power management state support: off
      PME# support: 0x00
    Control/status register: 0x0000
      Power state: D0
      PCI Express reserved: off
      No soft reset: off
      PME# assertion disabled
      PME# status: off


  Device-dependent header:
    0x40: 0x00220001 0x00000000 0x00000000 0x00000000
    0x50: 0x00000000 0x00000000 0x00000000 0x00000000
    0x60: 0x00000000 0x00000000 0x00000000 0x00000000
    0x70: 0x00000000 0x00000000 0x00000000 0x00000000
    0x80: 0x00000000 0x00000000 0x00000000 0x00000000
    0x90: 0x00000000 0x00000000 0x00000000 0x00000000
    0xa0: 0x00000000 0x00000000 0x00000000 0x00000000
    0xb0: 0x00000000 0x00000000 0x00000000 0x00000000
    0xc0: 0x00000000 0x00000000 0x00000000 0x00000000
    0xd0: 0x00000000 0x00000000 0x00000000 0x00000000
    0xe0: 0x00000000 0x00000000 0x00000000 0x00000000
    0xf0: 0x00000000 0x00000000 0x00000000 0x00000000

>How-To-Repeat:
Get an EX-41098-2 8-port Serial PCI 32bit Card and try to use it. It will be found, configured and may be accessed (if puc is configured into the kernel), but you cannot get any communication with other devices.
>Fix:
replace "COM_FREQ * 10" by "COM_FREQ" for all eigth ports and everything is fine.
(At least everything seems to work here.)

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Mon, 06 Aug 2012 16:42:41 +0000
Responsible-Changed-Why:
mine.


From: SAITOH Masanobu <msaitoh@execsw.org>
To: gnats-bugs@NetBSD.org
Cc: netbsd-bugs@netbsd.org, msaitoh@execsw.org
Subject: Re: kern/46362: PUC driver for OX16PCI958 uses wrong freq setup
Date: Wed, 08 Aug 2012 05:15:58 +0900

 This is a multi-part message in MIME format.
 --------------000209060302070601030905
 Content-Type: text/plain; charset=us-ascii
 Content-Transfer-Encoding: 7bit

 > I do not know if there are other cards with this chip that needs the "* 10" setup or if this is just
 > a copy and paste error.

  That entry was taken from FreeBSD.

  Could you test with attached diff?

 -- 
 -----------------------------------------------
                 SAITOH Masanobu (msaitoh@execsw.org
                                  msaitoh@netbsd.org)

 --------------000209060302070601030905
 Content-Type: video/x-dv;
  name="puc.dif"
 Content-Transfer-Encoding: base64
 Content-Disposition: attachment;
  filename="puc.dif"

 SW5kZXg6IHB1Y2RhdGEuYwo9PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
 PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09ClJDUyBmaWxlOiAvY3Zzcm9vdC9zcmMv
 c3lzL2Rldi9wY2kvcHVjZGF0YS5jLHYKcmV0cmlldmluZyByZXZpc2lvbiAxLjc5CmRpZmYg
 LXUgLXIxLjc5IHB1Y2RhdGEuYwotLS0gcHVjZGF0YS5jCTcgQXVnIDIwMTIgMTk6Mzg6Mjgg
 LTAwMDAJMS43OQorKysgcHVjZGF0YS5jCTcgQXVnIDIwMTIgMjA6MTI6MDggLTAwMDAKQEAg
 LTExNjQsNyArMTE2NCwyNCBAQAogCSAgICB9LAogCX0sCiAKLQkvKiBPeGZvcmQgU2VtaWNv
 bmR1Y3RvciBPWDE2UENJOTU4IFVBUlRzICovCisJLyogRVhTWVMgRVgtNDEwOTgtMiBVQVJU
 cyAqLworCXsgICAiRVhTWVMgRVgtNDEwOTgtMiBVQVJUcyIsCisJICAgIHsJUENJX1ZFTkRP
 Ul9PWEZPUkRTRU1JLAlQQ0lfUFJPRFVDVF9PWEZPUkRTRU1JX09YMTZQQ0k5NTgsCisJCVBD
 SV9WRU5ET1JfT1hGT1JEU0VNSSwgMHgwNjcxIH0sCisJICAgIHsJMHhmZmZmLAkweGZmZmYs
 CTB4ZmZmZiwJMHhmZmZmCX0sCisJICAgIHsKKwkJeyBQVUNfUE9SVF9UWVBFX0NPTSwgMHgx
 OCwgMHgwMCwgQ09NX0ZSRVF9LAorCQl7IFBVQ19QT1JUX1RZUEVfQ09NLCAweDE4LCAweDA4
 LCBDT01fRlJFUX0sCisJCXsgUFVDX1BPUlRfVFlQRV9DT00sIDB4MTgsIDB4MTAsIENPTV9G
 UkVRfSwKKwkJeyBQVUNfUE9SVF9UWVBFX0NPTSwgMHgxOCwgMHgxOCwgQ09NX0ZSRVF9LAor
 CQl7IFBVQ19QT1JUX1RZUEVfQ09NLCAweDE4LCAweDIwLCBDT01fRlJFUX0sCisJCXsgUFVD
 X1BPUlRfVFlQRV9DT00sIDB4MTgsIDB4MjgsIENPTV9GUkVRfSwKKwkJeyBQVUNfUE9SVF9U
 WVBFX0NPTSwgMHgxOCwgMHgzMCwgQ09NX0ZSRVF9LAorCQl7IFBVQ19QT1JUX1RZUEVfQ09N
 LCAweDE4LCAweDM4LCBDT01fRlJFUX0sCisJICAgIH0sCisJfSwKKworCS8qIE94Zm9yZCBT
 ZW1pY29uZHVjdG9yIE9YMTZQQ0k5NTggVUFSVHMgKHdpbGRjYXJkKSovCiAJeyAgICJPeGZv
 cmQgU2VtaWNvbmR1Y3RvciBPWDE2UENJOTU4IFVBUlRzIiwKIAkgICAgewlQQ0lfVkVORE9S
 X09YRk9SRFNFTUksCVBDSV9QUk9EVUNUX09YRk9SRFNFTUlfT1gxNlBDSTk1OCwKIAkJMCwg
 MCB9LAo=
 --------------000209060302070601030905--

From: Wolfgang Stukenbrock <wolfgang.stukenbrock@nagler-company.com>
To: gnats-bugs@NetBSD.org
Cc: msaitoh@NetBSD.org, gnats-admin@NetBSD.org, netbsd-bugs@NetBSD.org,
        wgstuken@nagler-company.com
Subject: Re: kern/46362: PUC driver for OX16PCI958 uses wrong freq setup
Date: Sat, 11 Aug 2012 10:07:51 +0200

 Hi,

 it took some time do test it, but now it's done.

 Your patch matches my EXSYS card and the rates are OK.

 I think you can integrate it into the sources and close this PR.

 best regards

 W. Stukenbrock

 SAITOH Masanobu wrote:

 > The following reply was made to PR kern/46362; it has been noted by GNATS.
 > 
 > From: SAITOH Masanobu <msaitoh@execsw.org>
 > To: gnats-bugs@NetBSD.org
 > Cc: netbsd-bugs@netbsd.org, msaitoh@execsw.org
 > Subject: Re: kern/46362: PUC driver for OX16PCI958 uses wrong freq setup
 > Date: Wed, 08 Aug 2012 05:15:58 +0900
 > 
 >  This is a multi-part message in MIME format.
 >  --------------000209060302070601030905
 >  Content-Type: text/plain; charset=us-ascii
 >  Content-Transfer-Encoding: 7bit
 >  
 >  > I do not know if there are other cards with this chip that needs the "* 10" setup or if this is just
 >  > a copy and paste error.
 >  
 >   That entry was taken from FreeBSD.
 >  
 >   Could you test with attached diff?
 >  
 >  -- 
 >  -----------------------------------------------
 >                  SAITOH Masanobu (msaitoh@execsw.org
 >                                   msaitoh@netbsd.org)
 >  
 >  --------------000209060302070601030905
 >  Content-Type: video/x-dv;
 >   name="puc.dif"
 >  Content-Transfer-Encoding: base64
 >  Content-Disposition: attachment;
 >   filename="puc.dif"
 >  
 >  SW5kZXg6IHB1Y2RhdGEuYwo9PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
 >  PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09ClJDUyBmaWxlOiAvY3Zzcm9vdC9zcmMv
 >  c3lzL2Rldi9wY2kvcHVjZGF0YS5jLHYKcmV0cmlldmluZyByZXZpc2lvbiAxLjc5CmRpZmYg
 >  LXUgLXIxLjc5IHB1Y2RhdGEuYwotLS0gcHVjZGF0YS5jCTcgQXVnIDIwMTIgMTk6Mzg6Mjgg
 >  LTAwMDAJMS43OQorKysgcHVjZGF0YS5jCTcgQXVnIDIwMTIgMjA6MTI6MDggLTAwMDAKQEAg
 >  LTExNjQsNyArMTE2NCwyNCBAQAogCSAgICB9LAogCX0sCiAKLQkvKiBPeGZvcmQgU2VtaWNv
 >  bmR1Y3RvciBPWDE2UENJOTU4IFVBUlRzICovCisJLyogRVhTWVMgRVgtNDEwOTgtMiBVQVJU
 >  cyAqLworCXsgICAiRVhTWVMgRVgtNDEwOTgtMiBVQVJUcyIsCisJICAgIHsJUENJX1ZFTkRP
 >  Ul9PWEZPUkRTRU1JLAlQQ0lfUFJPRFVDVF9PWEZPUkRTRU1JX09YMTZQQ0k5NTgsCisJCVBD
 >  SV9WRU5ET1JfT1hGT1JEU0VNSSwgMHgwNjcxIH0sCisJICAgIHsJMHhmZmZmLAkweGZmZmYs
 >  CTB4ZmZmZiwJMHhmZmZmCX0sCisJICAgIHsKKwkJeyBQVUNfUE9SVF9UWVBFX0NPTSwgMHgx
 >  OCwgMHgwMCwgQ09NX0ZSRVF9LAorCQl7IFBVQ19QT1JUX1RZUEVfQ09NLCAweDE4LCAweDA4
 >  LCBDT01fRlJFUX0sCisJCXsgUFVDX1BPUlRfVFlQRV9DT00sIDB4MTgsIDB4MTAsIENPTV9G
 >  UkVRfSwKKwkJeyBQVUNfUE9SVF9UWVBFX0NPTSwgMHgxOCwgMHgxOCwgQ09NX0ZSRVF9LAor
 >  CQl7IFBVQ19QT1JUX1RZUEVfQ09NLCAweDE4LCAweDIwLCBDT01fRlJFUX0sCisJCXsgUFVD
 >  X1BPUlRfVFlQRV9DT00sIDB4MTgsIDB4MjgsIENPTV9GUkVRfSwKKwkJeyBQVUNfUE9SVF9U
 >  WVBFX0NPTSwgMHgxOCwgMHgzMCwgQ09NX0ZSRVF9LAorCQl7IFBVQ19QT1JUX1RZUEVfQ09N
 >  LCAweDE4LCAweDM4LCBDT01fRlJFUX0sCisJICAgIH0sCisJfSwKKworCS8qIE94Zm9yZCBT
 >  ZW1pY29uZHVjdG9yIE9YMTZQQ0k5NTggVUFSVHMgKHdpbGRjYXJkKSovCiAJeyAgICJPeGZv
 >  cmQgU2VtaWNvbmR1Y3RvciBPWDE2UENJOTU4IFVBUlRzIiwKIAkgICAgewlQQ0lfVkVORE9S
 >  X09YRk9SRFNFTUksCVBDSV9QUk9EVUNUX09YRk9SRFNFTUlfT1gxNlBDSTk1OCwKIAkJMCwg
 >  MCB9LAo=
 >  --------------000209060302070601030905--
 >  
 > 
 > 


 -- 


 Dr. Nagler & Company GmbH
 Hauptstraße 9
 92253 Schnaittenbach

 Tel. +49 9622/71 97-42
 Fax +49 9622/71 97-50

 Wolfgang.Stukenbrock@nagler-company.com
 http://www.nagler-company.com


 Hauptsitz: Schnaittenbach
 Handelregister: Amberg HRB
 Gerichtsstand: Amberg
 Steuernummer: 201/118/51825
 USt.-ID-Nummer: DE 273143997
 Geschäftsführer: Dr. Martin Nagler, Dr. Dr. Karl-Kuno Kunze


State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Wed, 15 Aug 2012 01:04:19 +0000
State-Changed-Why:
Fixed in -current. Thanks.


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46362 CVS commit: src/sys/dev/pci
Date: Wed, 15 Aug 2012 01:03:18 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Wed Aug 15 01:03:17 UTC 2012

 Modified Files:
 	src/sys/dev/pci: pucdata.c

 Log Message:
 Add EXSYS EX-41098-2 UARTs support. The clock frequency is
 different from other card(s).
 Fixes PR#46362 reported by Wolfgang Stukenbrock.


 To generate a diff of this commit:
 cvs rdiff -u -r1.79 -r1.80 src/sys/dev/pci/pucdata.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46362 CVS commit: [netbsd-6] src
Date: Wed, 31 Oct 2012 17:27:02 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Oct 31 17:27:02 UTC 2012

 Modified Files:
 	src/share/man/man4 [netbsd-6]: puc.4
 	src/sys/dev/pci [netbsd-6]: pcidevs pucdata.c

 Log Message:
 sys/dev/pci/pucdata.c				1.77-1.82
 sys/dev/pci/pcidevs				1.1125, 1.1129 via patch
 sys/dev/pci/pcidevs.h				regen
 sys/dev/pci/pcidevs_data.h			regen
 share/man/man4/puc.4				1.36-1.38

 Add entries for puc(4) devices into pcidevs.
 Add some Intel devices from document (Intel 7 Series / C216 Chipset
 Family Platform Controller Hub (PCH) Family Specification Update)
 into pcidevs.
 Modify some devices in pcidevs to clarify.
 Add Intel chipset internal serial over lan devices. Closes PR/45567.
 Use PCI_VENDOR_* and PCI_PRODUCT_*. Fixes PR#46303.
 Add EXSYS EX-41098-2 UARTs support. The clock frequency is different
 from other card(s). Fixes PR#46362 reported by Wolfgang Stukenbrock.
 Add Lava Computers SSERIAL-PCI single port serial PCI card.
 Update the manual.


 To generate a diff of this commit:
 cvs rdiff -u -r1.35 -r1.35.4.1 src/share/man/man4/puc.4
 cvs rdiff -u -r1.1102.2.8 -r1.1102.2.9 src/sys/dev/pci/pcidevs
 cvs rdiff -u -r1.76 -r1.76.8.1 src/sys/dev/pci/pucdata.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.