Add EXSYS EX-41098-2 UARTs support. The clock frequency is different from other card(s). Fixes PR#46362 reported by Wolfgang Stukenbrock.